Ajouts test pour Lycanthrope Meute CoupleAlpha Colonie Hurlement